@@ -1,3 +1,9 @@
+2008-09-22  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/smarttitles.pl: Refactored. This is a flashy rewrite; it
+	improves integration with "creole.pl", "poetry.pl", et al., HTML
+	configurability, CSS styleability, and perldoc-style documentation.
+
 2008-09-22  Alex Schroeder  <alex@gnu.org>
 
 	* modules/namespaces.pl (NewNamespaceGetAuthorLink): New hook into
